# kakutag

./: .gitignore  CMakeLists.txt  LICENSE  README.ja.md  README.md  kakutag.hpp
.github/workflows/: ci.yml
bench/: shadow_aruco_bench.cpp
cmake/: KakuTagConfig.cmake.in
tests/: smoke.cpp
